<resources>
    <string name="app_name">Intent</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="buka_kontak">Buka Kontak</string>
    <string name="buka_musik">Buka Musik</string>
    <string name="buka_youtube">Buka Youtube</string>
    <string name="buka_galeri">Buka Galeri</string>
    <string name="buka_browser">Buka Browser</string>
    <string name="dialog">dialog</string>
    <string name="tutup">Tutup</string>
    <string name="img">img</string>
    <string name="more">More</string>
    <string name="SQL_create_table">CREATE TABLE IF NOT EXISTS kontakku(nama TEXT, nomor TEXT);</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="masukkan_nomor_telepon">Masukkan nomor telepon</string>
    <string name="nama_lama">Nama lama</string>
    <string name="nama_baru">Nama baru</string>
    <string name="nomor_baru">Nomor baru</string>
    <string name="nomor_lama">Nomor lama</string>
    <string name="try_fragment">Try Fragment</string>
    <string name="search">Search</string>
    <string name="go">Go</string>
    <string name="fragment_1"><![CDATA[<Fragment 1>]]></string>
    <string name="fragment_2"><![CDATA[<Fragment 2>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="fragment_1_nich">Fragment 1 Nich</string>
    <string name="fragment_2_nich">Fragment 2 Nich</string>
    <string name="try_maps">Try Maps</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="_0">0</string>
    <string name="locate">Locate</string>
    <string name="buka_maps_1">Buka Maps 1</string>
    <string name="buka_maps_2">Buka Maps 2</string>
    <string name="buka_maps_3">Buka Maps 3</string>
    <string name="masukkan_di_sini">Masukkan di sini</string>
    <string name="zoom">Zoom</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="nonex">Nonex</string>
    <string name="none">None</string>
    <string name="filter">Filter</string>
    <string name="update">Update</string>
    <string name="stop">Stop</string>
    <string name="lat_0_0">Lat: 0.0</string>
    <string name="long_0_0">Long: 0.0</string>
    <string name="waktu_00_00">waktu: 00.00</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="telepon">Telepon</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="detail">Detail</string>
</resources>