<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Maps3"
    android:orientation="vertical">

    <fragment
        android:id="@+id/frag_maps2"
        android:layout_width="411dp"
        android:layout_height="600dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/update"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/stop"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat_0_0"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/longi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/long_0_0"/>
        <TextView
            android:id="@+id/jam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/waktu_00_00"/>

    </LinearLayout>

</LinearLayout>