<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn1"
        android:layout_marginTop="10dp"
        android:text="@string/button_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn1"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/tutup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/tutup"
        android:layout_below="@id/btn2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <FrameLayout
        android:id="@+id/fragment"
        android:name="com.example.intent.frag1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tutup"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"/>

</RelativeLayout>