<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        android:id="@+id/img" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            android:text="@string/nama_lama" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/old_nm"
            android:importantForAutofill="no"
            android:textSize="14sp"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            android:text="@string/nomor_lama" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/old_nmr"
            android:importantForAutofill="no"
            android:textSize="14sp"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            android:text="@string/nama_baru" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_nm"
            android:importantForAutofill="no"
            android:textSize="14sp"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            android:text="@string/nomor_baru" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_nmr"
            android:importantForAutofill="no"
            android:textSize="14sp"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </LinearLayout>

</LinearLayout>